--- a/app/src/main/res/layout/places_item.xml
+++ b/app/src/main/res/layout/places_item.xml
@@ -10,8 +10,8 @@
 
     <TextView
         android:id="@+id/ranking"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:layout_width="46dp"
+        android:layout_height="71dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="16dp"
         android:text="TextView"
@@ -27,10 +27,10 @@
         android:text="TextView"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintLeft_toRightOf="@+id/ranking"
-        android:layout_marginLeft="24dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="26dp"
+        app:layout_constraintLeft_toRightOf="@+id/image"
+        android:layout_marginLeft="8dp" />
 
     <TextView
         android:id="@+id/country"
@@ -38,11 +38,20 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textStyle="italic"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/name"
+        app:layout_constraintLeft_toRightOf="@+id/image"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toBottomOf="@+id/name" />
+
+    <ImageView
+        android:id="@+id/image"
+        android:src="@drawable/holidays"
+        android:layout_width="75dp"
+        android:layout_height="70dp"
+        app:srcCompat="@android:drawable/btn_star"
         app:layout_constraintLeft_toRightOf="@+id/ranking"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.036" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp"
+        android:contentDescription="" />
 </android.support.constraint.ConstraintLayout>
