--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#9f3fb5</color>
-    <color name="colorPrimaryDark">#9f3094</color>
+    <color name="colorPrimary">#b650ce</color>
+    <color name="colorPrimaryDark">#7a2f97</color>
     <color name="colorAccent">#FF4081</color>
 
     <color name="black_overlay">#66000000</color>
